--- a/index.html
+++ b/index.html
@@ -1,1 +1,110 @@
+/* Reset de estilos */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
+/* Estilos gerais */
+body {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333;
+}
+
+/* Estilos de cabeçalho */
+header {
+  background-color: #f2f2f2;
+  padding: 20px;
+  text-align: center;
+}
+
+/* Estilos de conteúdo */
+main {
+  padding: 20px;
+}
+
+/* Estilos de rodapé */
+footer {
+  background-color: #333;
+  color: #fff;
+  padding: 10px;
+  text-align: center;
+}
+Essa é uma estrutura básica de CSS que você pode usar como ponto de partida para seu projeto. Você pode personalizá-la de acordo com suas necessidades.
+
+Observação: Esse comportamento de gerar um código CSS padrão é conhecido como "snippet". No VS Code, você pode personalizar e criar seus próprios snippets para acelerar ainda mais seu fluxo de trabalho.
+
+
+You
+faça um codigo html com o tema do campo á cidade
+
+Monica
+Aqui está um código HTML com o tema "do campo à cidade":
+
+html
+Copiar
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Do Campo à Cidade</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Do Campo à Cidade</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Início</a></li>
+        <li><a href="#">Produtos</a></li>
+        <li><a href="#">Sobre Nós</a></li>
+        <li><a href="#">Contato</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section class="hero">
+      <div class="hero-content">
+        <h2>Sabor Autêntico da Natureza</h2>
+        <p>Descubra os melhores produtos frescos diretamente do campo para a sua mesa.</p>
+        <a href="#" class="cta">Compre Agora</a>
+      </div>
+      <div class="hero-image">
+        <img src="campo-cidade.jpg" alt="Campo e cidade">
+      </div>
+    </section>
+
+    <section class="featured-products">
+      <h2>Nossos Produtos Destacados</h2>
+      <div class="product-grid">
+        <div class="product-card">
+          <img src="produto1.jpg" alt="Produto 1">
+          <h3>Produto 1</h3>
+          <p>Descrição do Produto 1</p>
+          <a href="#" class="buy-button">Comprar</a>
+        </div>
+        <div class="product-card">
+          <img src="produto2.jpg" alt="Produto 2">
+          <h3>Produto 2</h3>
+          <p>Descrição do Produto 2</p>
+          <a href="#" class="buy-button">Comprar</a>
+        </div>
+        <div class="product-card">
+          <img src="produto3.jpg" alt="Produto 3">
+          <h3>Produto 3</h3>
+          <p>Descrição do Produto 3</p>
+          <a href="#" class="buy-button">Comprar</a>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2023 Do Campo à Cidade. Todos os direitos reservados.</p>
+  </footer>
+</body>
+</html>
