--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Meu Site com Botões e Placar</title>
+    <title>Meu Site com Botões, Placar e Mini-Jogo</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -17,13 +17,28 @@
             font-size: 40px;
             margin-top: 30px;
         }
+        #jogo {
+            margin-top: 50px;
+        }
+        #jogo button {
+            font-size: 16px;
+            padding: 8px 16px;
+        }
     </style>
 </head>
 <body>
-    <h1>Meu Site com Botões e Placar</h1>
+    <h1>Meu Site com Botões, Placar e Mini-Jogo</h1>
     <button onclick="incrementarPlacar()">Adicionar 1 ponto</button>
     <button onclick="zerarPlacar()">Zerar Placar</button>
     <div id="placar">0</div>
+
+    <div id="jogo">
+        <h2>Mini-Jogo: Adivinhe o Número</h2>
+        <p>Tente adivinhar um número entre 1 e 10:</p>
+        <input type="number" id="numeroInput" min="1" max="10">
+        <button onclick="verificarNumero()">Verificar</button>
+        <p id="resultado"></p>
+    </div>
 
     <script>
         let pontos = 0;
@@ -36,6 +51,21 @@
         function zerarPlacar() {
             pontos = 0;
             document.getElementById("placar").innerHTML = pontos;
+        }
+
+        function verificarNumero() {
+            let numeroAleatorio = Math.floor(Math.random() * 10) + 1;
+            let numeroDigitado = document.getElementById("numeroInput").value;
+            let resultadoElement = document.getElementById("resultado");
+
+            if (parseInt(numeroDigitado) === numeroAleatorio) {
+                resultadoElement.innerHTML = "Parabéns, você acertou!";
+                incrementarPlacar();
+            } else {
+                resultadoElement.innerHTML = "Ops, tente novamente. O número era " + numeroAleatorio + ".";
+            }
+
+            document.getElementById("numeroInput").value = "";
         }
     </script>
 </body>
